--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jscryptor",
-  "version": "0.0.12",
+  "name": "jscryptor-2",
+  "version": "0.0.1",
   "description": "Javascript implementation of RNCryptor",
   "main": "index.js",
   "scripts": {
